| Bug #30885 | MEMORY returns incorrect data if BTREE index is used for NULL lookup | ||
|---|---|---|---|
| Submitted: | 7 Sep 2007 7:17 | Modified: | 24 Oct 2007 20:03 |
| Reporter: | Domas Mituzas | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Memory storage engine | Severity: | S2 (Serious) |
| Version: | 5.0.50-bk | OS: | Any |
| Assigned to: | Ramil Kalimullin | CPU Architecture: | Any |
| Tags: | inconsistency, Memory | ||
[7 Sep 2007 7:17]
Domas Mituzas
[5 Oct 2007 11:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/34958 ChangeSet@1.2517, 2007-10-05 16:33:15+05:00, ramil@mysql.com +3 -0 Fix for bug #30885: MEMORY returns incorrect data if BTREE index is used for NULL lookup Problem: creating an rb-tree key we store length (2 bytes) before the actual data for varchar key parts. The fact was missed for NULL key parts, when we set NULL byte and skip the rest. Fix: take into account the length of the varchar key parts for NULLs.
[18 Oct 2007 21:35]
Bugs System
Pushed into 5.1.23-beta
[18 Oct 2007 21:36]
Bugs System
Pushed into 5.0.52
[24 Oct 2007 20:03]
Paul DuBois
Noted in 5.0.52, 5.1.23 changelogs. For MEMORY tables, lookups for NULL values in BTREE indexes could return incorrect results.
